--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -11,7 +11,7 @@
 
 @if (Session["faculty"] == null)
 {
-    <div class="" role="alert"style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
+    <div class="" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
         Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
     </div>
     <div>
@@ -19,23 +19,23 @@
     </div>
 }
 else if (ViewBag.CheckFormPer == true)
-{
-    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
-        CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
-    </div>
-    <div>
-        <img src="~/assets/img/vlu/fomm.png" class="cangiua">
-    </div>
-}
-else if (ViewBag.CheckReportPer == true)
-{
-    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:25px;">
-        BẠN ĐÃ BÁO CÁO THÁNG NÀY!
-    </div>
-    <div>
-        <img src="~/assets/img/vlu/formm.png" class="cangiua">
-    </div>
-}
+    {
+        <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
+            CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
+        </div>
+        <div>
+            <img src="~/assets/img/vlu/fomm.png" class="cangiua">
+        </div>
+    }
+    else if (ViewBag.CheckReportPer == true)
+    {
+        <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:25px;">
+            BẠN ĐÃ BÁO CÁO THÁNG NÀY!
+        </div>
+        <div>
+            <img src="~/assets/img/vlu/formm.png" class="cangiua">
+        </div>
+    }
 else
 {
     CP25Team04Entities models = new CP25Team04Entities();
@@ -77,9 +77,6 @@ else
                                                     <h4>
                                                         @(((char)j).ToString()). @items.Category.category_content.ToUpper()
                                                     </h4>
-                                                    <div class="card-header-action">
-                                                        <a data-collapse="#panel-body-@(((char)j).ToString())" class="btn btn-icon" href="#@(((char)j).ToString())"></a>
-                                                    </div>
                                                 </div>
                                             </div>
                                             foreach (var itemss in Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == items.category_id && c.Category.category_lv == 2).ToList())
@@ -201,20 +198,25 @@ else
                                         }
                                     }
                                 }
-
-                            </div>
-
-                            <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
-                            <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
-                            </div>
-                            <div class="input-group mb-3">
-                                <input type="file" class="form-control" id="minhChungFile">
-                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
-                            </div>
-                            <div class="text-right mt-3">
-                                <button id="btnSubmit" type="button" class="btn btn-primary">Lưu báo cáo</button>
-                                @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>*@
+                                <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
+                                <div class="accordion">
+                                    <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
+                                        <h4>
+                                            <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                                        </h4>
+                                        <div class="card-header-action">
+                                            <a data-collapse="#panel-body-B" class="btn btn-icon" href="#B"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="file" class="form-control" id="minhChungFile">
+                                    <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                                </div>
+                                <div class="text-right mt-3">
+                                    <button id="btnSubmit" type="button" class="btn btn-primary">Lưu báo cáo</button>
+                                    @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>*@
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -223,10 +225,6 @@ else
         </div>
     </section>
 }
-
-
-
-
 
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
@@ -306,7 +304,7 @@ else
                         location.reload();
                     });
                 } else {
-                    swal('Thất bại', 'Báo cáo không thành công', 'error');
+                    swal('Thất bại', ketqua, 'error');
                 }
             });
         }
