--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalReportEdit.cshtml
@@ -16,7 +16,6 @@
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.PersonalReports.Where(p => p.report_period_id == idKy && p.account_id.Equals(accID)).ToList();
     int per = ViewBag.PerDetail;
-
 }
 
 
@@ -34,7 +33,6 @@
                     <div class="card">
                         <div class="card-body">
                             <div id="accordion">
-
                                 @if (Model.FormPersonalReportDetails.Count() > 0)
                                 {
                                     foreach (var items in Model.FormPersonalReportDetails)
@@ -66,7 +64,6 @@
                                                         @if (Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).Count() < 1)
                                                         {
                                                             int inputIndex = 0;
-
                                                             <table class="table table-bordered dataTable">
 
                                                                 <tbody>
@@ -85,11 +82,15 @@
                                                                     }
                                                                     <tr hidden id="append-@itemss.category_id"></tr>
                                                                     <tr>
-                                                                        <td>
-                                                                            <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                        </td>
-                                                                        <td>
-                                                                            <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                        <td colspan="2">
+                                                                            <div class="row">
+                                                                                <div class="col">
+                                                                                    <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                </div>
+                                                                                <div class="col">
+                                                                                    <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                </div>
+                                                                            </div>
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -153,11 +154,15 @@
                                                                                 }
                                                                                 <tr hidden id="append-@itemsss.category_id"></tr>
                                                                                 <tr>
-                                                                                    <td>
-                                                                                        <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                                    </td>
-                                                                                    <td>
-                                                                                        <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                                    <td colspan="2">
+                                                                                        <div class="row">
+                                                                                            <div class="col">
+                                                                                                <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                            </div>
+                                                                                            <div class="col">
+                                                                                                <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                            </div>
+                                                                                        </div>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
@@ -188,7 +193,7 @@
                             </div>
                             <div class="text-right mt-3">
                                 <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
-                                @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailStaffAsync","NotificationStaff")">Lưu báo cáo</a>*@
+                                @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailpersonalAsync","Notificationpersonal")">Lưu báo cáo</a>*@
                             </div>
                         </div>
                     </div>
@@ -203,27 +208,35 @@
 <script>
     //Thêm input
     $('[id^="themnoidung-"]').on('click', function (e) {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val()) + 1;
-        $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
-            + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
-            + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
-        $('#dem-' + id).val(inputCount);
-    });
-    $('[id^="xoanoidung-"]').on('click', function () {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val());
-        if (inputCount > 1) {
-            $('#formInput-' + id + '-' + inputCount).remove();
-            $('#dem-' + id).val((inputCount - 1));
-        }
+        var upperCateAdd = $(this).data('uppercateadd');
+        $('[data-uppercateadd="' + upperCateAdd + '"]').each(function () {
+            var id = $(this).attr("name");
+            var inputCount = Number($('#dem-' + id).val()) + 1;
+            $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
+                + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
+                + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
+            $('#dem-' + id).val(inputCount);
+        });
     });
     //xóa input
+    $('[id^="xoanoidung-"]').on('click', function () {
+        var upperCateDelete = $(this).data('uppercatedelete');
+        $('[data-uppercatedelete="' + upperCateDelete + '"]').each(function () {
+            let id = $(this).attr("name");
+            let inputCount = Number($('#dem-' + id).val());
+            if (inputCount > 1) {
+                $('#formInput-' + id + '-' + inputCount).remove();
+                $('#dem-' + id).val((inputCount - 1));
+            }
+        });
+
+    });
     $('#btnSubmit').on('click', function () {
         var lstCate = $('#lstCategory').val().split('-');
         var datas = ""; //Chuỗi data phân tách nhau bởi các ký tự: idform1=noidung1-noidung2~idform2=noidung1-noidung2
         var check = true;
         for (var i = 0; i < lstCate.length; i++) {
+            console.log($('#frmPerDetail-' + lstCate[i]).val() + "=" + $('#noidung-' + lstCate[i] + "-1").val().trim() + "~");
             if (Number($('#dem-' + lstCate[i]).val()) < 2) {
                 $('#validation-noidung-' + lstCate[i] + "-1").hide();
                 if ($('#noidung-' + lstCate[i] + "-1").val().trim().length < 1) {
@@ -252,10 +265,10 @@
 
         if (check == true) {
             var formData = new FormData();
-            formdata.append("fileminhchung", $('#minhchungfile')[0].files[0]);
+            formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
             formData.append("data", datas.substring(0, datas.length - 1));
             formData.append("reportperiodid", $('#report_period_id').val());
-
+            console.log(datas.substring(0, datas.length - 1));
             $.ajax({
                 url: $('#requestUrl').val() + 'Personal/Report/PersonalReportEdit',
                 type: 'POST',
@@ -265,7 +278,9 @@
                 data: formData
             }).done(function (ketqua) {
                 if (ketqua == "Success") {
-                    swal('Thành công', 'Báo cáo tháng thành công', 'success');
+                    swal('Thành công', 'Chỉnh sửa báo cáo tháng thành công', 'success').then(function () {
+                        location.href = '@Url.Action("Personal", "Report", new { Area = "Personal" })';
+                    });
                 } else {
                     swal('Thất bại', 'Báo cáo không thành công', 'error');
                 }
