--- a/MonthlyStatement/Views/Profile/Index.cshtml
+++ b/MonthlyStatement/Views/Profile/Index.cshtml
@@ -47,6 +47,21 @@
                                 <hr class="mt-0 mb-4">
                                 <div class="row pt-1">
                                     <div class="col-6 mb-3">
+                                        <h6>Bộ môn</h6>
+                                        <div class="text-muted">
+                                            @if (@Model.user_code == null)
+                                            {
+                                                <p class="text-muted mb-0">Chưa có mã giảng viên</p>
+                                            }
+                                            else
+                                            {
+                                                <p class="text-muted mb-0">@Model.user_code</p>
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row pt-1">
+                                    <div class="col-6 mb-3">
                                         <h6>Khoa</h6>
                                         <div class="text-muted">
                                             @if (@Model.faculty_id == null)
@@ -56,6 +71,21 @@
                                             else
                                             {
                                                 <p class="text-muted mb-0">@Model.Faculty.faculty_name</p>
+                                            }
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row pt-1">
+                                    <div class="col-6 mb-3">
+                                        <h6>Bộ môn</h6>
+                                        <div class="text-muted">
+                                            @if (@Model.department_id == null)
+                                            {
+                                                <p class="text-muted mb-0">Chưa có bộ môn</p>
+                                            }
+                                            else
+                                            {
+                                                <p class="text-muted mb-0">@Model.Department.department_name</p>
                                             }
                                         </div>
                                     </div>
@@ -122,6 +152,20 @@
                             <label>Họ và tên</label>
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Nhập họ và tên" name="name" value="@Model.user_name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Mã giảng viên</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Nhập mã giảng viên" name="user_code" value="@Model.user_code">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Bộ môn</label>
+                            <div class="selectric-wrapper selectric-form-control selectric-selectric selectric-below">
+                                <div class="selectric-hide-select">
+                                    @Html.DropDownList("department_id", null, htmlAttributes: new { @class = "form-control" })
+                                </div>
                             </div>
                         </div>
                         <div class="modal-footer">
