--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -72,8 +72,8 @@
                             <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
                                 <a href="@Url.Action("Personal", "Report", new { Area = "Personal" })" class="nav-link"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                             </li>
-                            <li class=@(ViewBag.Title == "Tạo báo cáo" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "FormReport", new { Area = "Personal" })" class="nav-link"><i data-feather="edit"></i><span>Tạo báo cáo</span></a>
+                            <li class=@(ViewBag.Title == "Viết báo cáo" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "FormReport", new { Area = "Personal" })" class="nav-link"><i data-feather="edit"></i><span>Viết báo cáo</span></a>
                             </li>
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
@@ -86,8 +86,8 @@
                             <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
                                 <a href="@Url.Action("Staff", "StaffReport", new { Area = "Staff" })" class="nav-link"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                             </li>
-                            <li class=@(ViewBag.Title == "Tạo báo cáo" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "FormStaffReport", new { Area = "Staff" })" class="nav-link"><i data-feather="edit"></i><span>Tạo báo cáo</span></a>
+                            <li class=@(ViewBag.Title == "Viết báo cáo" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "FormStaffReport", new { Area = "Staff" })" class="nav-link"><i data-feather="edit"></i><span>Viết báo cáo</span></a>
                             </li>
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
@@ -100,11 +100,11 @@
                             <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
                                 <a href="@Url.Action("Department", "DepartmentReport", new { Area = "Department" })" class="nav-link"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                             </li>
-                            <li class=@(ViewBag.Title == "Tạo báo cáo" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "FormDepartmentReport", new { Area = "Department" })" class="nav-link"><i data-feather="edit"></i><span>Tạo báo cáo</span></a>
+                            <li class=@(ViewBag.Title == "Viết báo cáo" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "FormDepartmentReport", new { Area = "Department" })" class="nav-link"><i data-feather="edit"></i><span>Viết báo cáo</span></a>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
+                                <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="users"></i><span>Quản lý báo cáo cá nhân</span></a>
                                 <ul class="dropdown-menu">
                                     <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Giảng viên</a></li>
                                     <li><a class="nav-link" href="@Url.Action("Index", "ListReportStaff", new { Area = "Admin" })">Nhân viên</a></li>
@@ -117,8 +117,8 @@
                     else if (User.IsInRole("Ban phòng khoa"))
                     {
                         <ul class="sidebar-menu">
-                            <li class=@(ViewBag.Title == "Quản lý người báo cáo" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "FacManager", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="users"></i><span>Quản lý tham dự</span></a>
+                            <li class=@(ViewBag.Title == "Quản lý khoa" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index","FacManager", new { Area = "FacultyAreas"})" class="nav-link"><i data-feather="users"></i><span>Quản lý khoa</span></a>
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
@@ -138,31 +138,31 @@
                         </ul> }
                     else if (User.IsInRole("Thư ký"))
                     {
-                <ul class="sidebar-menu">
-                    <li class=@(ViewBag.Title == "Quản lý người báo cáo" ? "active" : "nav-item")>
-                        <a href="@Url.Action("Index", "FacManager", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="users"></i><span>Quản lý tham dự</span></a>
-                    </li>
-                    <li class=@(ViewBag.Title == "Quản lý danh mục" ? "active" : "nav-item")>
-                        <a href="@Url.Action("Index", "Categories", new { Area = "Admin" })" class="nav-link"><i data-feather="grid"></i><span>Quản lý danh mục</span></a>
-                    </li>
-                    <li class="dropdown">
-                    <li class=@(ViewBag.Title == "Quản lý biễu mẫu báo cáo" ? "active" : "nav-item")>
-                        <a href="@Url.Action("Index", "YearReport", new { Area = "Admin" })" class="nav-link"><i data-feather="briefcase"></i><span>Quản lý biễu mẫu báo cáo</span></a>
-                    </li>
-                    <li class=@(ViewBag.Title == "Duyệt báo cáo bộ môn" ? "active" : "nav-item")>
-                        <a href="@Url.Action("Index", "CheckReportDepartment", new { Area = "Secretary" })" class="nav-link"><i data-feather="check"></i><span>Duyệt báo cáo bộ môn</span></a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
-                        <ul class="dropdown-menu">
-                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Giảng viên</a></li>
-                            <li><a class="nav-link" href="@Url.Action("Index", "ListReportStaff", new { Area = "Admin" })">Nhân viên</a></li>
+                        <ul class="sidebar-menu">
+                            <li class=@(ViewBag.Title == "Quản lý người báo cáo" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "FacManager", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="users"></i><span>Quản lý tham dự</span></a>
+                            </li>
+                            <li class=@(ViewBag.Title == "Quản lý danh mục" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "Categories", new { Area = "Admin" })" class="nav-link"><i data-feather="grid"></i><span>Quản lý danh mục</span></a>
+                            </li>
+                            <li class="dropdown">
+                            <li class=@(ViewBag.Title == "Quản lý biễu mẫu báo cáo" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "YearReport", new { Area = "Admin" })" class="nav-link"><i data-feather="briefcase"></i><span>Quản lý biễu mẫu báo cáo</span></a>
+                            </li>
+                            <li class=@(ViewBag.Title == "Duyệt báo cáo bộ môn" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "CheckReportDepartment", new { Area = "Secretary" })" class="nav-link"><i data-feather="check"></i><span>Duyệt báo cáo bộ môn</span></a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="menu-toggle nav-link has-dropdown"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Giảng viên</a></li>
+                                    <li><a class="nav-link" href="@Url.Action("Index", "ListReportStaff", new { Area = "Admin" })">Nhân viên</a></li>
+                                </ul>
+                            </li>
+                            <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "Statistical", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="briefcase"></i><span>Thống kê</span></a>
+                            </li>
                         </ul>
-                    </li>
-                    <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
-                        <a href="@Url.Action("Index", "Statistical", new { Area = "FacultyAreas" })" class="nav-link"><i data-feather="briefcase"></i><span>Thống kê</span></a>
-                    </li>
-                </ul>
                     }
                 </aside>
             </div>
@@ -173,7 +173,7 @@
         </div>
     </div>
     <input hidden="hidden" id="requestUrl" value="@Url.Content("~")" />
-    
+
     <!-- General JS Scripts -->
     <script src="~/assets/js/app.min.js"></script>
     <!-- JS Libraies -->
