--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
@@ -26,7 +26,9 @@
                         <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
                     </div>
                 </div>
-                <button type="button" class="btn btn-primary mb-2" onclick="PrintElem('#formPrint')">In</button>
+                <div class="col-12">
+                    <button type="button" class="btn btn-primary mb-2" onclick="PrintElem('#formPrint')">In</button>
+                </div>
                 <div class="col-12" id="formPrint">
                     <div class="card">
                         <div class="card-body">
@@ -94,10 +96,8 @@
                                 {
                                     lstId += items_lv2.category_id + "-";
                                     i++;
-
                                     <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                                         <div class="col-lg-12">
-
                                             <table class="table table-bordered dataTable">
                                                 <tbody>
                                                     <tr class="" style="max-width: 50px">
@@ -185,49 +185,63 @@
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-                            <div class="input-group mb-3">
-                                <a class="form-control" href="@Url.Action("DownLoad","Report", new {file_path = personalReport.file_path})" download="File import">Tải file</a>
+                            <div class="col">
+                                <table class="table table-bordered dataTable">
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                @if (personalReport.file_path != null)
+                                                {
+                                                    <a class="form-control" href="@Url.Action("DownLoad","Report", new {file_path = personalReport.file_path})" download="File import">Tải file</a>
+                                                }
+                                                else
+                                                {
+                                                    <input readonly type="text" value="Không có minh chứng" class="form-control">
+                                                }
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
-                            <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-title mt-3" style="font-weight:bold">
+                    <label>BÌNH LUẬN</label>
+                </div>
+                <hr />
+                <div class="col-12">
+                    <div class="card" style="background-color: #e9ecef">
+                        <div class="card-body">
+
+                            <div class="chat">
+                                @foreach (var comment in models.Comments.Where(x => x.personal_report_id == per).ToList())
+                                {
+                                    <div class="chat-header clearfix">
+                                        <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
+                                        <div class="chat-about">
+                                            <div class="chat-time form-inline">
+                                                <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
+                                                &emsp;
+                                                @comment.comment_date
+                                            </div>
+                                            <div class="chat-text">@comment.comment_content</div>
+                                        </div>
+                                    </div>
+                                }
                             </div>
                             <hr />
-                            <div class="col-12">
-                                <div class="card" style="background-color: #e9ecef">
-                                    <div class="card-body">
-
-                                        <div class="chat">
-                                            @foreach (var comment in models.Comments.Where(x => x.personal_report_id == per).ToList())
-                                            {
-                                                <div class="chat-header clearfix">
-                                                    <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
-                                                    <div class="chat-about">
-                                                        <div class="chat-time form-inline">
-                                                            <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
-                                                            &emsp;
-                                                            @comment.comment_date
-                                                        </div>
-                                                        <div class="chat-text">@comment.comment_content</div>
-                                                    </div>
-                                                </div>
-                                            }
-
-                                        </div>
-                                        <hr />
-                                        <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostComment", "CommentsPersonal", FormMethod.Post))
-                                        {
-                                            <input type="hidden" name="id" value="@per" />
-                                            <div class="form-group">
-                                                <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
-                                            </div>
-                                            <div class="text-right mt-3">
-                                                <button class="btn btn-primary" type="submit">Gửi</button>
-                                            </div>
-                                        }
-                                    </div>
+                            <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
+                            @using (Html.BeginForm("PostComment", "CommentsPersonal", FormMethod.Post))
+                            {
+                                <input type="hidden" name="id" value="@per" />
+                                <div class="form-group">
+                                    <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                 </div>
-                            </div>
+                                <div class="text-right mt-3">
+                                    <button class="btn btn-primary" type="submit">Gửi</button>
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
