--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalReportEdit.cshtml
@@ -127,69 +127,78 @@
 
                                                                 </tbody>
                                                             </table>
-                                                            foreach (var itemsss in Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
-                                                            {
-                                                                lstId += itemsss.category_id + "-";
-                                                                k++;
-                                                                int inputIndex = 0;
+                                                            <div>
+                                                                <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                                    @foreach (var itemsss in Model.FormPersonalReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
+                                                                    {
+                                                                        lstId += itemsss.category_id + "-";
+                                                                        k++;
+                                                                        int inputIndex = 0;
 
-                                                                <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
-                                                                    <div class="col-lg-12 ">
                                                                         <input hidden id="dem-@itemsss.category_id" value="@models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == itemsss.form_personal_report_detail_id && p.personal_report_id == per).Count()" />
                                                                         <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_personal_report_detail_id" />
-                                                                        <table class="table table-bordered dataTable">
-                                                                            <tbody>
-                                                                                <tr class="boxdanhmuc">
-                                                                                    <th colspan="2"> @itemsss.Category.category_content</th>
-                                                                                </tr>
-                                                                                @foreach (var items_content_lv3 in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == itemsss.form_personal_report_detail_id && p.personal_report_id == per).ToList())
-                                                                                {
-                                                                                    inputIndex++;
+                                                                        <div class="col">
+                                                                            <table class="table table-bordered dataTable">
+                                                                                <tbody>
+                                                                                    <tr class="boxdanhmuc">
+                                                                                        <th colspan="2"> @itemsss.Category.category_content</th>
+                                                                                    </tr>
+                                                                                    @foreach (var items_content_lv3 in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == itemsss.form_personal_report_detail_id && p.personal_report_id == per).ToList())
+                                                                                    {
+                                                                                        inputIndex++;
 
-                                                                                    <tr id="formInput-@itemsss.category_id">
+                                                                                        <tr id="formInput-@itemsss.category_id">
+                                                                                            <td colspan="2">
+                                                                                                <input type="text" value="@items_content_lv3.personal_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
+                                                                                            </td>
+                                                                                        </tr>
+                                                                                    }
+                                                                                    <tr hidden id="append-@itemsss.category_id"></tr>
+                                                                                    <tr>
                                                                                         <td colspan="2">
-                                                                                            <input type="text" value="@items_content_lv3.personal_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
+                                                                                            <div class="row">
+                                                                                                <div class="col">
+                                                                                                    <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                                </div>
+                                                                                                <div class="col">
+                                                                                                    <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                                </div>
+                                                                                            </div>
                                                                                         </td>
                                                                                     </tr>
-                                                                                }
-                                                                                <tr hidden id="append-@itemsss.category_id"></tr>
-                                                                                <tr>
-                                                                                    <td colspan="2">
-                                                                                        <div class="row">
-                                                                                            <div class="col">
-                                                                                                <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
-                                                                                            </div>
-                                                                                            <div class="col">
-                                                                                                <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
-                                                                                            </div>
-                                                                                        </div>
-                                                                                    </td>
-                                                                                </tr>
-                                                                            </tbody>
-                                                                        </table>
-                                                                    </div>
+                                                                                </tbody>
+                                                                            </table>
+                                                                        </div>
+                                                                    }
                                                                 </div>
-
-                                                            }
+                                                            </div>
                                                         }
-
                                                     </div>
                                                 </div>
-
                                             }
                                         }
                                     }
                                 }
 
                             </div>
-
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                                <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-                            <div class="input-group mb-3">
-                                <input type="file" class="form-control" id="minhChungFile">
-                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                            <div class="col">
+                                <table class="table table-bordered dataTable">
+                                    <tbody>
+                                        <tr>
+                                            <td class="input-group mb-3">
+                                                <input type="file" class="form-control" id="minhChungFile">
+                                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div >
+
                             </div>
                             <div class="text-right mt-3">
                                 <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
@@ -202,7 +211,6 @@
         </div>
     </div>
 </section>
-
 
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
@@ -288,6 +296,3 @@
         }
     });
 </script>
-
-
-
