--- a/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffReportEdit.cshtml
@@ -33,7 +33,6 @@
                     <div class="card">
                         <div class="card-body">
                             <div id="accordion">
-
                                 @if (Model.FormStaffReportDetails.Count() > 0)
                                 {
                                     foreach (var items in Model.FormStaffReportDetails)
@@ -83,11 +82,15 @@
                                                                     }
                                                                     <tr hidden id="append-@itemss.category_id"></tr>
                                                                     <tr>
-                                                                        <td>
-                                                                            <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                        </td>
-                                                                        <td>
-                                                                            <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                        <td colspan="2">
+                                                                            <div class="row">
+                                                                                <div class="col">
+                                                                                    <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                </div>
+                                                                                <div class="col">
+                                                                                    <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                </div>
+                                                                            </div>
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -124,65 +127,78 @@
 
                                                                 </tbody>
                                                             </table>
-                                                            foreach (var itemsss in Model.FormStaffReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
-                                                            {
-                                                                lstId += itemsss.category_id + "-";
-                                                                k++;
-                                                                int inputIndex = 0;
+                                                            <div>
+                                                                <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                                    @foreach (var itemsss in Model.FormStaffReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
+                                                                    {
+                                                                        lstId += itemsss.category_id + "-";
+                                                                        k++;
+                                                                        int inputIndex = 0;
 
-                                                                <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
-                                                                    <div class="col-lg-12 ">
                                                                         <input hidden id="dem-@itemsss.category_id" value="@models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == itemsss.form_staff_report_detail_id && p.staff_report_id == per).Count()" />
                                                                         <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_staff_report_detail_id" />
-                                                                        <table class="table table-bordered dataTable">
-                                                                            <tbody>
-                                                                                <tr class="boxdanhmuc">
-                                                                                    <th colspan="2"> @itemsss.Category.category_content</th>
-                                                                                </tr>
-                                                                                @foreach (var items_content_lv3 in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == itemsss.form_staff_report_detail_id && p.staff_report_id == per).ToList())
-                                                                                {
-                                                                                    inputIndex++;
+                                                                        <div class="col">
+                                                                            <table class="table table-bordered dataTable">
+                                                                                <tbody>
+                                                                                    <tr class="boxdanhmuc">
+                                                                                        <th colspan="2"> @itemsss.Category.category_content</th>
+                                                                                    </tr>
+                                                                                    @foreach (var items_content_lv3 in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == itemsss.form_staff_report_detail_id && p.staff_report_id == per).ToList())
+                                                                                    {
+                                                                                        inputIndex++;
 
-                                                                                    <tr id="formInput-@itemsss.category_id">
+                                                                                        <tr id="formInput-@itemsss.category_id">
+                                                                                            <td colspan="2">
+                                                                                                <input type="text" value="@items_content_lv3.staff_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
+                                                                                            </td>
+                                                                                        </tr>
+                                                                                    }
+                                                                                    <tr hidden id="append-@itemsss.category_id"></tr>
+                                                                                    <tr>
                                                                                         <td colspan="2">
-                                                                                            <input type="text" value="@items_content_lv3.staff_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
+                                                                                            <div class="row">
+                                                                                                <div class="col">
+                                                                                                    <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                                </div>
+                                                                                                <div class="col">
+                                                                                                    <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                                </div>
+                                                                                            </div>
                                                                                         </td>
                                                                                     </tr>
-                                                                                }
-                                                                                <tr hidden id="append-@itemsss.category_id"></tr>
-                                                                                <tr>
-                                                                                    <td>
-                                                                                        <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                                    </td>
-                                                                                    <td>
-                                                                                        <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
-                                                                                    </td>
-                                                                                </tr>
-                                                                            </tbody>
-                                                                        </table>
-                                                                    </div>
+                                                                                </tbody>
+                                                                            </table>
+                                                                        </div>
+                                                                    }
                                                                 </div>
-
-                                                            }
+                                                            </div>
                                                         }
-
                                                     </div>
                                                 </div>
-
                                             }
                                         }
                                     }
                                 }
 
                             </div>
-
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
                             <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                                <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-                            <div class="input-group mb-3">
-                                <input type="file" class="form-control" id="minhChungFile">
-                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                            <div class="col">
+                                <table class="table table-bordered dataTable">
+                                    <tbody>
+                                        <tr>
+                                            <td class="input-group mb-3">
+                                                <input type="file" class="form-control" id="minhChungFile">
+                                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div>
+
                             </div>
                             <div class="text-right mt-3">
                                 <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
@@ -196,27 +212,33 @@
     </div>
 </section>
 
-
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
     //Thêm input
     $('[id^="themnoidung-"]').on('click', function (e) {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val()) + 1;
-        $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
-            + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
-            + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
-        $('#dem-' + id).val(inputCount);
-    });
-    $('[id^="xoanoidung-"]').on('click', function () {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val());
-        if (inputCount > 1) {
-            $('#formInput-' + id + '-' + inputCount).remove();
-            $('#dem-' + id).val((inputCount - 1));
-        }
+        var upperCateAdd = $(this).data('uppercateadd');
+        $('[data-uppercateadd="' + upperCateAdd + '"]').each(function () {
+            var id = $(this).attr("name");
+            var inputCount = Number($('#dem-' + id).val()) + 1;
+            $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
+                + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
+                + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
+            $('#dem-' + id).val(inputCount);
+        });
     });
     //xóa input
+    $('[id^="xoanoidung-"]').on('click', function () {
+        var upperCateDelete = $(this).data('uppercatedelete');
+        $('[data-uppercatedelete="' + upperCateDelete + '"]').each(function () {
+            let id = $(this).attr("name");
+            let inputCount = Number($('#dem-' + id).val());
+            if (inputCount > 1) {
+                $('#formInput-' + id + '-' + inputCount).remove();
+                $('#dem-' + id).val((inputCount - 1));
+            }
+        });
+
+    });
     $('#btnSubmit').on('click', function () {
         var lstCate = $('#lstCategory').val().split('-');
         var datas = ""; //Chuỗi data phân tách nhau bởi các ký tự: idform1=noidung1-noidung2~idform2=noidung1-noidung2
@@ -274,6 +296,3 @@
         }
     });
 </script>
-
-
-
