--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -152,7 +152,6 @@ else
                                                                 {
                                                                     lstId += itemsss.category_id + "-";
                                                                     k++;
-
                                                                     <div class="col">
                                                                         <input hidden id="dem-@itemsss.category_id" value="1" />
                                                                         <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_personal_report_detail_id" />
@@ -196,10 +195,10 @@ else
                                 <div class="accordion">
                                     <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
                                         <h4>
-                                            <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                                            @(((char)(++j)).ToString()). MINH CHỨNG
                                         </h4>
                                         <div class="card-header-action">
-                                            <a data-collapse="#panel-body-B" class="btn btn-icon" href="#B"></a>
+                                            <a data-collapse="#panel-body-A" class="btn btn-icon" href="#A"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -298,7 +297,7 @@ else
                         location.reload();
                     });
                 } else {
-                    swal('Thất bại', ketqua, 'error');
+                    swal('Thất bại', 'Báo cáo không thành công, hãy chắc chắn bạn đã điền đầy đủ thông tin trong hồ sơ', 'error');
                 }
             });
         }
