--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
@@ -258,6 +258,7 @@
         var mywindow = window.open();
         mywindow.document.write('<html><head><title>Invoice</title>');
         mywindow.document.write("<link rel=\"stylesheet\" href=\"/assets/css/bootstrap.min.css\" type=\"text/css\"/>");
+        mywindow.document.write("<link rel=\"stylesheet\" href=\"/assets/css/custom.css\" type=\"text/css\"/>");
         mywindow.document.write('</head><body>');
         mywindow.document.write(data);
         mywindow.document.write('</body></html>');
