--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentDetail.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentDetail.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model  MonthlyStatement.Models.FormDepartmentReport
+﻿@model  MonthlyStatement.Models.FormDepartmentReport
 @using MonthlyStatement.Models
 @{
     ViewBag.Title = "DepartmentDetail";
@@ -14,6 +14,7 @@
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.DepartmentReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(accID));
     int per = ViewBag.DepDetail;
+    var departmentReport = (DepartmentReport)ViewBag.DepartmentReport;
 }
 
 <section class="section">
@@ -22,31 +23,81 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo bộ môn</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
                     </div>
                 </div>
                 <div class="col-12">
+                    <button type="button" class="btn btn-primary mb-2" onclick="PrintElem('#formPrint')">In</button>
+                </div>
+                <div class="col-12" id="formPrint">
                     <div class="card">
                         <div class="card-body">
+                            <div class="section-title mt-1" style="font-weight:bold">
+                                <label>@(((char)(++j)).ToString()). Thông tin nhân sự</label>
+                            </div>
+                            <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                <div class="col-lg-12">
+                                    <table class="table table-bordered dataTable">
+                                        <tbody>
+                                            <tr class="" style="max-width: 50px">
+                                                <th>1. Họ và tên</th>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input readonly type="text" class="form-control" value="@departmentReport.reporter">
+                                                </td>
+                                            </tr>
+                                            <tr class="" style="max-width: 50px">
+                                                <th>2. MGV</th>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input readonly type="text" class="form-control" value="@departmentReport.user_code">
+                                                </td>
+                                            </tr>
+                                            <tr class="" style="max-width: 50px">
+                                                <th>3. Bộ môn</th>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input readonly type="text" class="form-control" value="@departmentReport.user_department">
+                                                </td>
+                                            </tr>
+                                            <tr class="" style="max-width: 50px">
+                                                <th>4. Đơn vị khoa</th>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input readonly type="text" class="form-control" value="@departmentReport.user_faculty">
+                                                </td>
+                                            </tr>
+                                            <tr class="" style="max-width: 50px">
+                                                <th>5. Thời gian báo cáo</th>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <input readonly type="date" class="form-control" value="@(departmentReport.date_report?.ToString("yyyy-MM-dd"))">
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                             @foreach (var items in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_lv == 1).ToList())
                             {
-
                                 i = 0;
                                 j++;
                                 <br />
                                 <div class="section-title mt-1" style="font-weight:bold">
                                     @(((char) j).ToString()). @items.Category.category_content.ToUpper()
-
                                 </div>
 
                                 foreach (var items_lv2 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
                                 {
                                     lstId += items_lv2.category_id + "-";
                                     i++;
-
                                     <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
                                         <div class="col-lg-12">
-
                                             <table class="table table-bordered dataTable">
                                                 <tbody>
                                                     <tr class="" style="max-width: 50px">
@@ -55,12 +106,13 @@
 
                                                     @if (models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id).Count() > 0)
                                                     {
+
                                                         int inputIndex = 0;
-                                                        inputIndex++;
                                                         if (!models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                                         {
                                                             foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id && p.department_report_id == per).ToList())
                                                             {
+                                                                inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex">
                                                                     <td>
                                                                         <input readonly type="text" value="@items_content.department_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
@@ -84,9 +136,7 @@
                                                     <tr hidden id="append-@items.category_id"></tr>
                                                 </tbody>
                                             </table>
-
                                         </div>
-
                                     </div>
                                     if (models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                     {
@@ -135,49 +185,63 @@
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
-                            <div class="input-group mb-3">
-                                <input class="form-control" src="~/assets/FileMinhChung/" disabled>
+                            <div class="col">
+                                <table class="table table-bordered dataTable">
+                                    <tbody>
+                                        <tr>
+                                            <td>
+                                                @if (departmentReport.file_path != null)
+                                                {
+                                                    <a class="form-control" href="@Url.Action("DownLoad","DepartmentReport", new {file_path = departmentReport.file_path})" download="File import">Tải file</a>
+                                                }
+                                                else
+                                                {
+                                                    <input readonly type="text" value="Không có minh chứng" class="form-control">
+                                                }
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
-                            <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-title mt-3" style="font-weight:bold">
+                    <label>BÌNH LUẬN</label>
+                </div>
+                <hr />
+                <div class="col-12">
+                    <div class="card" style="background-color: #e9ecef">
+                        <div class="card-body">
+
+                            <div class="chat">
+                                @foreach (var comment in models.Comments.Where(x => x.department_report_id == per).ToList())
+                                {
+                                    <div class="chat-header clearfix">
+                                        <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
+                                        <div class="chat-about">
+                                            <div class="chat-time form-inline">
+                                                <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
+                                                &emsp;
+                                                @comment.comment_date
+                                            </div>
+                                            <div class="chat-text">@comment.comment_content</div>
+                                        </div>
+                                    </div>
+                                }
                             </div>
                             <hr />
-                            <div class="col-12">
-                                <div class="card" style="background-color: #e9ecef">
-                                    <div class="card-body">
-
-                                        <div class="chat">
-                                            @foreach (var comment in models.Comments.Where(x => x.department_report_id == per).ToList())
-                                            {
-                                                <div class="chat-header clearfix">
-                                                    <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
-                                                    <div class="chat-about">
-                                                        <div class="chat-time form-inline">
-                                                            <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
-                                                            &emsp;
-                                                            @comment.comment_date
-                                                        </div>
-                                                        <div class="chat-text">@comment.comment_content</div>
-                                                    </div>
-                                                </div>
-                                            }
-
-                                        </div>
-                                        <hr />
-                                        <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostComment", "CommentsDepartment", FormMethod.Post))
-                                        {
-                                            <input type="hidden" name="id" value="@per" />
-                                            <div class="form-group">
-                                                <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
-                                            </div>
-                                            <div class="text-right mt-3">
-                                                <button class="btn btn-primary" type="submit">Gửi</button>
-                                            </div>
-                                        }
-                                    </div>
+                            <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
+                            @using (Html.BeginForm("PostComment", "CommentsDepartment", FormMethod.Post))
+                            {
+                                <input type="hidden" name="id" value="@per" />
+                                <div class="form-group">
+                                    <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                 </div>
-                            </div>
+                                <div class="text-right mt-3">
+                                    <button class="btn btn-primary" type="submit">Gửi</button>
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -185,3 +249,26 @@
         </div>
     </div>
 </section>
+<script>
+    function PrintElem(elem) {
+        Popup($('<div/>').append($(elem).clone()).html());
+    }
+
+    function Popup(data) {
+        var mywindow = window.open();
+        mywindow.document.write('<html><head><title>Invoice</title>');
+        mywindow.document.write("<link rel=\"stylesheet\" href=\"/assets/css/bootstrap.min.css\" type=\"text/css\"/>");
+        mywindow.document.write("<link rel=\"stylesheet\" href=\"/assets/css/custom.css\" type=\"text/css\"/>");
+        mywindow.document.write('</head><body>');
+        mywindow.document.write(data);
+        mywindow.document.write('</body></html>');
+        mywindow.document.close(); // necessary for IE >= 10
+        mywindow.focus(); // necessary for IE >= 10*/
+
+        setTimeout(function () {
+            mywindow.print();
+            mywindow.close();
+        }, 1000);
+        return true;
+    }
+</script>
