--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
@@ -18,7 +18,6 @@
     int per = ViewBag.DepDetail;
     var lstCate = ((IEnumerable<Category>)ViewBag.CheckListCategory);
     var perDetail = ((IEnumerable<PersonalReportDetail>)ViewBag.MappingContent);
-
 }
 
 
@@ -117,6 +116,13 @@
                                                                     <tr class="" style="max-width: 50px">
                                                                         <th colspan="2">@(i). @itemss.Category.category_content</th>
                                                                     </tr>
+                                                                    <tr>
+                                                                        <td>
+                                                                            <button style="color:white" data-toggle="modal" class="btn btn-info" data-target="#addMapping">
+                                                                                Tổng hợp nội dung
+                                                                            </button>
+                                                                        </td>
+                                                                    </tr>
                                                                     @if (!Model.FormDepartmentReportDetails.Any(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3))
                                                                     {
                                                                         <tr id="formInput-@itemss.category_id">
@@ -140,63 +146,60 @@
 
                                                                 </tbody>
                                                             </table>
-                                                            foreach (var itemsss in Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
-                                                            {
-                                                                lstId += itemsss.category_id + "-";
-                                                                k++;
-                                                                int inputIndex = 0;
+                                                            <div>
+                                                                <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                                    @foreach (var itemsss in Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
+                                                                    {
+                                                                        lstId += itemsss.category_id + "-";
+                                                                        k++;
+                                                                        int inputIndex = 0;
+                                                                        <div class="col">
 
-                                                                <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
-                                                                    <div class="col-lg-12 ">
-                                                                        <input hidden id="dem-@itemsss.category_id" value="@models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemsss.form_department_report_detail_id).Count()" />
-                                                                        <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_department_report_detail_id" />
-                                                                        <table class="table table-bordered dataTable">
-                                                                            <tbody>
-                                                                                <tr class="boxdanhmuc">
-                                                                                    <th colspan="2"> @itemsss.Category.category_content</th>
-                                                                                </tr>                                                                             
-                                                                                <tr>
-                                                                                    <td>
-                                                                                        <button style="color:white" data-toggle="modal" class="btn btn-info" data-target="#addMapping">
-                                                                                            Tổng hợp nội dung
-                                                                                        </button>
-                                                                                    </td>
-                                                                                </tr>
-                                                                                @foreach (var items_content_lv3 in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemsss.form_department_report_detail_id).ToList())
-                                                                                {
-                                                                                    inputIndex++;
+                                                                            <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
+                                                                                <div class="col-lg-12 ">
+                                                                                    <input hidden id="dem-@itemsss.category_id" value="@models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemsss.form_department_report_detail_id).Count()" />
+                                                                                    <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_department_report_detail_id" />
+                                                                                    <table class="table table-bordered dataTable">
+                                                                                        <tbody>
+                                                                                            <tr class="boxdanhmuc">
+                                                                                                <th colspan="2"> @itemsss.Category.category_content</th>
+                                                                                            </tr>
+   
+                                                                                            @foreach (var items_content_lv3 in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemsss.form_department_report_detail_id).ToList())
+                                                                                            {
+                                                                                                inputIndex++;
 
-                                                                                    <tr id="formInput-@itemsss.category_id">
-                                                                                        <td colspan="2">
-                                                                                            <input type="text" value="@items_content_lv3.department_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                }
-                                                                                <tr hidden id="append-@itemsss.category_id"></tr>
-                                                                                <tr>
-                                                                                    <td colspan="2">
-                                                                                        <div class="row">
-                                                                                            <div class="col">
-                                                                                                <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
-                                                                                            </div>
-                                                                                            <div class="col">
-                                                                                                <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
-                                                                                            </div>
-                                                                                        </div>
-                                                                                    </td>
-                                                                                </tr>
+                                                                                                <tr id="formInput-@itemsss.category_id">
+                                                                                                    <td colspan="2">
+                                                                                                        <input type="text" value="@items_content_lv3.department_report_content" class="form-control" id="noidung-@itemsss.category_id-@inputIndex">
+                                                                                                    </td>
+                                                                                                </tr>
+                                                                                            }
+                                                                                            <tr hidden id="append-@itemsss.category_id"></tr>
+                                                                                            <tr>
+                                                                                                <td colspan="2">
+                                                                                                    <div class="row">
+                                                                                                        <div class="col">
+                                                                                                            <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                                        </div>
+                                                                                                        <div class="col">
+                                                                                                            <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </td>
+                                                                                            </tr>
 
-                                                                            </tbody>
-                                                                        </table>
-                                                                    </div>
+                                                                                        </tbody>
+                                                                                    </table>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    }
                                                                 </div>
-
-                                                            }
+                                                            </div>
                                                         }
-
                                                     </div>
                                                 </div>
-
                                             }
                                         }
                                     }
@@ -205,8 +208,15 @@
                             </div>
 
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
-                            <div class="section-title mt-3" style="font-weight:bold">
-                                <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                            <div class="accordion">
+                                <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
+                                    <h4>
+                                        @(((char)(++j)).ToString()). MINH CHỨNG
+                                    </h4>
+                                    <div class="card-header-action">
+                                        <a data-collapse="#panel-body-A" class="btn btn-icon" href="#A"></a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="input-group mb-3">
                                 <input type="file" class="form-control" id="minhChungFile">
@@ -287,7 +297,7 @@
                                     </tbody>
                                     foreach (var itemss in lstCate.Where(c => c.category_of_id == items.category_id).ToList())
                                     {
-                                        var perDetailMapping = perDetail.Where(per => per.FormPersonalReportDetail.category_id == itemss.category_id).GroupBy(f => f.personal_report_content.ToLower()).ToList();
+                                        var perDetailMapping = perDetail.Where(perDe => perDe.FormPersonalReportDetail.category_id == itemss.category_id).GroupBy(f => f.personal_report_content.ToLower()).ToList();
                                         <tbody>
                                             <tr>
 
