--- a/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
@@ -137,6 +137,13 @@ else
                                                                         <tr class="" style="max-width: 50px">
                                                                             <th colspan="2">@(i). @itemss.Category.category_content</th>
                                                                         </tr>
+                                                                        <tr>
+                                                                            <td>
+                                                                                <button style="color:white" data-toggle="modal" class="btn btn-info" data-target="#addMapping">
+                                                                                    Tổng hợp nội dung
+                                                                                </button>
+                                                                            </td>
+                                                                        </tr>
                                                                         @if (!Model.FormDepartmentReportDetails.Any(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3))
                                                                         {
                                                                             <tr id="formInput-@itemss.category_id">
@@ -159,51 +166,45 @@ else
                                                                         }
                                                                     </tbody>
                                                                 </table>
-                                                                foreach (var itemsss in Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
-                                                                {
-                                                                    lstId += itemsss.category_id + "-";
-                                                                    k++;
-                                                                    <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
-                                                                        <div class="col-lg-12 ">
-                                                                            <input hidden id="dem-@itemsss.category_id" value="1" />
-                                                                            <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_department_report_detail_id" />
-                                                                            <table class="table table-bordered dataTable">
-                                                                                <tbody>
-                                                                                    <tr>
-                                                                                        <td>
-                                                                                            <button style="color:white" data-toggle="modal" class="btn btn-info" data-target="#addMapping">
-                                                                                                Tổng hợp nội dung
-                                                                                            </button>
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                    <tr class="boxdanhmuc">
-                                                                                        <th colspan="2">@(i).@(k) @itemsss.Category.category_content</th>
-                                                                                    </tr>
-                                                                                    <tr hidden id="append-@itemsss.category_id"></tr>
-                                                                                    <tr id="formInput-@itemsss.category_id-">
-                                                                                        <td colspan="2">
-                                                                                            <input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@itemsss.category_id-1">
-                                                                                            <p hidden id="validation-noidung-@itemsss.category_id-1" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                    <tr>
-                                                                                        <td colspan="2">
-                                                                                            <div class="row">
-                                                                                                <div class="col">
-                                                                                                    <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                <div>
+                                                                    <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                                                        @foreach (var itemsss in Model.FormDepartmentReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).ToList())
+                                                                        {
+                                                                            lstId += itemsss.category_id + "-";
+                                                                            k++;
+                                                                            <div class="col">
+                                                                                <input hidden id="dem-@itemsss.category_id" value="1" />
+                                                                                <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_department_report_detail_id" />
+                                                                                <table class="table table-bordered dataTable">
+                                                                                    <tbody>
+                                                                                        <tr class="boxdanhmuc">
+                                                                                            <th colspan="2">@itemsss.Category.category_content</th>
+                                                                                        </tr>
+                                                                                        <tr id="formInput-@itemsss.category_id-">
+                                                                                            <td colspan="2">
+                                                                                                <input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@itemsss.category_id-1">
+                                                                                                <p hidden id="validation-noidung-@itemsss.category_id-1" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
+                                                                                            </td>
+                                                                                        </tr>
+                                                                                        <tr hidden id="append-@itemsss.category_id"></tr>
+                                                                                        <tr>
+                                                                                            <td colspan="2">
+                                                                                                <div class="row">
+                                                                                                    <div class="col">
+                                                                                                        <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                                    </div>
+                                                                                                    <div class="col">
+                                                                                                        <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                                    </div>
                                                                                                 </div>
-                                                                                                <div class="col">
-                                                                                                    <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
-                                                                                                </div>
-                                                                                            </div>
-                                                                                        </td>
-                                                                                    </tr>
-                                                                                </tbody>
-                                                                            </table>
+                                                                                            </td>
+                                                                                        </tr>
+                                                                                    </tbody>
+                                                                                </table>
                                                                         </div>
+                                                                        }
                                                                     </div>
-
-                                                                }
+                                                                </div>
                                                             }
 
                                                         </div>
@@ -217,16 +218,23 @@ else
                                 </div>
 
                                 <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
-                                <div class="section-title mt-3" style="font-weight:bold">
-                                    <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                                <div class="accordion">
+                                    <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
+                                        <h4>
+                                            @(((char)(++j)).ToString()). MINH CHỨNG
+                                        </h4>
+                                        <div class="card-header-action">
+                                            <a data-collapse="#panel-body-A" class="btn btn-icon" href="#A"></a>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="input-group mb-3">
                                     <input type="file" class="form-control" id="minhChungFile">
                                     <label class="input-group-text" for="inputGroupFile02">Upload</label>
                                 </div>
                                 <div class="text-right mt-3">
-                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailDepartmentAsync","NotificationDepartment")">Lưu báo cáo</a>
-                                    @*<button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>*@
+                                    @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailDepartmentAsync","NotificationDepartment")">Lưu báo cáo</a>*@
+                                    <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
                                 </div>
                             </div>
                         </div>
@@ -313,7 +321,6 @@ else
                                                         @for (int y = 0; y < perDetailMapping.Count; y++)
                                                         {
                                                             <input data-id="@perDetailMapping[y].FirstOrDefault().personal_report_detail_id" type="hidden" class="perDetailMapping-@itemss.category_id" value="@perDetailMapping[y].Key" />
-
                                                         }
                                                     </div>
                                                 </td>
@@ -336,8 +343,6 @@ else
     </div>
 </div>
 
-
-
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
@@ -348,7 +353,7 @@ else
             var categoryid = $(this).val();
             var mappingContent = $('.perDetailMapping-' + categoryid);
             mappingContent.each(function () {
-                let inputCount = Number($('#dem-' + categoryid).val()) + 1;
+                var inputCount = Number($('#dem-' + categoryid).val()) + 1;
                 var mappingId = $(this).data('id');
                 if ($('#mappingPer-' + mappingId).length == 0 && $('#checkboxMapping-' + categoryid).is(':checked')) {
                     $('#append-' + categoryid).replaceWith('<tr id="formInput-' + categoryid + '-' + inputCount + '"><td colspan="2"><input readonly type="text" value="'
@@ -358,7 +363,8 @@ else
                         + '</td ></tr > <tr hidden id="append-' + categoryid + '"></tr>');
                     $('#dem-' + categoryid).val(inputCount);
                 }
-                else if (!$('#checkboxMapping-' + categoryid).is(':checked')) {
+                else if (!($('#checkboxMapping-' + categoryid).is(':checked'))) {
+                    console.log(inputCount)
                     $('#formInput-' + categoryid + '-' + inputCount).remove();
                     $('#dem-' + categoryid).val((inputCount - 1));
                 }
@@ -441,7 +447,7 @@ else
                         location.reload();
                     });
                 } else {
-                    swal('Thất bại', 'Báo cáo không thành công', 'error');
+                    swal('Thất bại', 'Báo cáo không thành công, hãy chắc chắn bạn đã điền đầy đủ thông tin trong hồ sơ', 'error');
                 }
             });
         }
