--- a/MonthlyStatement/Views/Profile/Index.cshtml
+++ b/MonthlyStatement/Views/Profile/Index.cshtml
@@ -100,7 +100,7 @@
                                             }
                                             else
                                             {
-                                                <p class="text-muted mb-0">@Model.Department.department_name</p>
+                                                <p class="text-muted mb-0">@Model.DepartmentList.department_name</p>
                                             }
                                         </div>
                                     </div>
