--- a/MonthlyStatement/Areas/FacultyAreas/Views/FacManager/EditRole.cshtml
+++ b/MonthlyStatement/Areas/FacultyAreas/Views/FacManager/EditRole.cshtml
@@ -1,7 +1,8 @@
 ﻿@model MonthlyStatement.Models.AspNetUser
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";   
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    var url = ViewBag.returnUrl;
 }
 <section class="section">
     <div class="section-body">
@@ -37,7 +38,7 @@
                                         Lưu
                                     </button>
                                     &emsp;
-                                    <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("FacMember", "FacManager", new { id = Model.Id})">
+                                    <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "FacManager")">
                                         Hủy
                                     </a>
                                 </div>
